# HW_14

./: alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/: conf.py  index.rst  make.bat
migration/: env.py
migration/versions/: f09ab1044d37_add_verify_for_user.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contacts.py  user.py
src/services/: auth.py  email.py  roles.py
tests/: test_repository_contacts.py  test_repository_users.py
