[tool.poetry]
name = "pythonproject10"
version = "0.1.0"
description = ""
authors = ["Anastasia <ashevchenko629@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
fastapi = "^0.108.0"
libgravatar = "^1.0.4"
passlib = "^1.7.4"
uvicorn = "^0.25.0"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
python-multipart = "^0.0.6"
bcrypt = "^4.1.2"
fastapi-mail = "^1.4.1"
python-dotenv = "^1.0.0"
fastapi-limiter = "^0.1.6"
cloudinary = "^1.38.0"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-mock = "^3.12.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
